# rusty-autoclicker

./: CHANGELOG_2.5.2.md  Cargo.toml  README.md  patch.diff
.cargo/: config.toml
.github/workflows/: build.yml  build_artifacts.yml  linux_build.yml  macos_build.yml  release.yml  rust_check.yml  windows_build.yml
src/: app.rs  defines.rs  main.rs  settings.rs  types.rs  utils.rs
src/gui/: mod.rs  windows.rs
src/gui/sections/: bars.rs  buttons.rs  click_config.rs  mod.rs
