[package]
name = "rusty-autoclicker"
version = "2.4.0"
repository = "https://github.com/MrTanoshii/rusty-autoclicker"
readme = "README.md"
rust-version = "1.96"
license-file = "LICENSE"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "4.0.1"
eframe = { version = "0.34.3", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
image = { version = "0.25", default-features = false, features = ["ico"] }
native-dialog = "0.9"
rand = "0.10.1"
rdev = "0.5"
sanitizer = { version = "1.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }

[build-dependencies]
winresource = "0.1"

[features]
default = []
persistence = [
    "eframe/persistence",
    "serde",
] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 3 # all optimizations
lto = true
codegen-units = 1
strip = true
